--- a/aboutus.html
+++ b/aboutus.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html>
- <head>
-  <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="https://zindzigriffin.github.io/WebClass/restuarant.css"/>
-  <title> In N Out Hamburgers </title>
+<html lang="en">
+<head>
+  <title>Zoo Box</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
- <div id".Centrer">
- </div>
- 
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Zoo Box</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="mailinglist.html">Mailing List</a></li>
+      <li><a href="zooboxindex.html">Home</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="pricing.html">Pricing</a></li>
+      <li><a href="recipes.html">Recipes</a></li>
+      <img src="logo.png" class="logo">
+    </ul>
+    </div>
+  </nav>
+   <body style ="background-color: powderblue;">
   <h1> About Us </h1>
-  <div id".Centrer">
- 
-  <p> In N Out is an American regional chain of fast food restuarants with locations primarily on the Pacific Coast and the American Southwest. In N Out is known for its amazingly delicious hamburgers, fries and shakes. In N Out has received so many awards about being one of the best fast food hamburger places. </p>
- </div>
- <table>
-       <tr>
-        <th>
-         <a href="menu.html">Menu
-          <br><img src="menu.jpg"></th>
-         <th>
-          <a href="indexrestaurant.html">Home
-           <br><img src="innout.jpg"></th>
-          <th>
-           <a href="contactus.html">Contact Us
-            <br><img src="contactus.jpg"></th>
-       </tr>
-     </table>                                                                                        
- </body>
-</html>
+  <img src="jknapp.jpg">
+  <p> Zoo Box came about from Mr. Knapp's love for food that involves exotic meat. In order to express his passion he decided to have a website that shows different meals being made with exotic meat. </p>
+</p> If you wish to learn more about Mr. Knapp and his love for exotic meat email him @jknapp@bentleyschool.net </p></body></html>
