--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
            <a href="https://zindzigriffin.github.io/WebClass/index2.html">Biography Website</a>
            <a href="https://zindzigriffin.github.io/WebClass/indexrestaurant.html">Restaurant Website</a>
            <a href="restaurant2.html">Restaurant 2.0</a>
+           <a href="zooboxindex.html">Zoo Box </a>
         </p>
 </div>                                                          
   </body>
