--- a/pricing.html
+++ b/pricing.html
@@ -29,5 +29,8 @@
     <p> 1/2 year -$55 2x/year </p>
     <p> Annual -$50 4x/year </p>
     <p> Renews automatically, can canel subscription anytime </p>
+	    <img src="meat.jpg">
+	    <img src="meat2.jpg>
+	    
 </body>
 </html>
